# utfr-wireless-telemetry

./: FIRMWARE_ARCHITECTURE.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  metrics_demo.py  scheduling_algorithm.md
base_station/: docker-compose.yml  todo.md
base_station/can_bridge/: Cargo.toml  Dockerfile  bridge.py  driver_analysis.py  math_channels.py
base_station/can_bridge/config/: config.toml
base_station/can_bridge/frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
base_station/can_bridge/frontend/src/lib/: mqtt.ts
base_station/can_bridge/frontend/src/lib/components/: ConfigEditor.svelte  DeviceList.svelte
base_station/can_bridge/frontend/src/routes/: +layout.svelte  +page.svelte
base_station/can_bridge/src/: main.rs  mqtt.rs
base_station/can_bridge/src/can_recv/: mod.rs
base_station/can_bridge/src/config/: mod.rs  routes.rs
base_station/can_bridge/src/usb/: mod.rs
base_station/can_bridge/static/: index.html  track.html
base_station/grafana/provisioning/dashboards/: battery.json  dashboards.yaml  driver.json  dynamics.json  lv_system.json  overview.json  powertrain.json  suspension.json
base_station/grafana/provisioning/datasources/: mqtt.yaml
base_station/grafana/provisioning/plugins/: mqtt.yaml
base_station/link-config/: config.toml
base_station/mdns/: Dockerfile  advertise.py
base_station/nginx/: nginx.conf
ble_test/: Cargo.toml  sdkconfig.defaults
ble_test/.cargo/: config.toml
bmi270/: Cargo.toml  README.md
bmi270/src/: bmi270.rs  bmi_conf.rs  interface.rs  lib.rs  registers.rs  types.rs  units.rs
bmi270/src/registers/: init_data.rs
can_mock/: Cargo.toml  sdkconfig.defaults
can_mock/src/: imu.rs  main.rs
can_receiver/: Cargo.toml  sdkconfig.defaults  test_commands.py
can_receiver/src/: ble.rs  main.rs  stdin.rs  stdin_read.rs  telemetry.rs
can_relay/: Cargo.toml  SD_CARD_TESTING.md  build.rs  sdkconfig.defaults
can_relay/.cargo/: config.toml
can_relay/docs/: RTC_DESIGN.md
can_relay/src/: ble.rs  can_interface.rs  main.rs  pose_estimation.rs  rtc.rs  sd_logger.rs
can_relay/src/ble/: mod.rs
can_relay/src/can_interface/: mock_can.rs  mod.rs  real_can.rs
mock_car_data_transmit/: mock_car_data_transmit.ino
protocol/: Cargo.toml
protocol/src/: hex_bytes.rs  hex_id.rs  lib.rs
scripts/: README.md  can_simulator.py  driver_analysis.py  math_channels.py  metrics_demo.py  serve_web.py
scripts/web/: track.html
