[package]
name = "can_mock"
version = "0.1.0"
authors = ["Clive Fellows <96612196+crfellows2@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "can_mock"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
enumset = "1.1.10"
embassy-futures = "0.1.2"
bmi270 = { path = "../bmi270", features = ["async"] }


[build-dependencies]
embuild = "0.33"
