[package]
name = "can_receiver"
version = "0.1.0"
authors = ["Clive Fellows <96612196+crfellows2@users.noreply.github.com>"]
edition = "2024"
resolver = "2"
rust-version = "1.85"

[[bin]]
name = "can_receiver"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
esp32-nimble = "0.12.0"
bstr = "1.12.1"
anyhow = "1.0.102"
edge-executor = "0.4.1"
protocol = { path = "../protocol" }
postcard = { version = "1.1" }
serde_json = "1.0"
heapless = "0.9"

[build-dependencies]
embuild = "0.33"
