[package]
name = "can_relay"
version = "0.1.0"
authors = ["Clive Fellows <96612196+crfellows2@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "can_relay"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }

esp32-nimble = "0.12.0"
enumset = "1.1.10"
embassy-futures = "0.1.2"
embassy-sync = "0.8"
ds323x = "0.7"
anyhow = "1.0.102"
edge-executor = "0.4.1"
bstr = "1.12.1"
chrono = { version = "0.4", default-features = false }

protocol = { path = "../protocol" }
postcard = "1.1.3"
heapless = "0.7"
serde = { version = "1.0", default-features = false }
futures = "0.3.32"

[features]
mock-can = []

[build-dependencies]
embuild = "0.33"
