[package]
name = "can_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
toml = "0.8"
anyhow = "1"
serialport = "4"
futures = "0.3"

protocol = { path = "../../protocol" }
tokio-serial = "5.4.5"
